<?xml version="1.0" encoding="utf-8"?>
<!-- AI-assisted -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.summitnavigator.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.summitnavigator.ui.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_sessionDetailFragment"
            app:destination="@id/sessionDetailFragment" />
        <action
            android:id="@+id/action_scheduleFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_scheduleFragment_to_myAgendaFragment"
            app:destination="@id/myAgendaFragment" />
    </fragment>

    <fragment
        android:id="@+id/sessionDetailFragment"
        android:name="com.example.summitnavigator.ui.SessionDetailFragment"
        android:label="@string/title_session_detail"
        tools:layout="@layout/fragment_session_detail">
        <argument
            android:name="sessionId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.summitnavigator.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/myAgendaFragment"
        android:name="com.example.summitnavigator.ui.agenda.MyAgendaFragment"
        android:label="My Agenda"
        tools:layout="@layout/fragment_my_agenda">
        <action
            android:id="@+id/action_myAgendaFragment_to_sessionDetailFragment"
            app:destination="@id/sessionDetailFragment" />
    </fragment>
</navigation>
